@@ -78,6 +78,7 @@
 - CUDA Backend: Give detailed warning if either the NVIDIA CUDA or the NVIDIA RTC library cannot be initialized
 - CUDA Backend: Use blocking events to avoid 100% CPU core usage (per GPU)
 - OpenCL Runtime: Workaround JiT compiler deadlock on NVIDIA driver >= 465.89
+- OpenCL Runtime: Workaround JiT compiler segfault on legacy AMDGPU driver compiling RAR3 OpenCL kernel
 - RAR3 Kernels: Improved loop code, improving performance by 23%
 - Scrypt Kernels: Added a number of GPU specific optimizations per hash modes to hashcat.hctune
 - Scrypt Kernels: Added detailed documentation on device specific tunings in hashcat.hctune
